Bug #41871
client: return error when someone passes bad whence value to llseek
% Done:
0%
Source:
Development
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature:
Description
There are a number of ceph_assert calls in src/client/Client.cc that are probably not necessary. There are calls in lseek and the file locking code in particular but there may be others. Do a cleanup pass through there and just have it return error instead of ceph_assert'ing when we can.
Related issues
History
#1 Updated by Jeff Layton over 1 year ago
- Assignee set to Jeff Layton
#2 Updated by Jeff Layton over 1 year ago
- Subject changed from remove some ceph_asserts from libcephfs to remove some ceph_aborts from libcephfs
s/ceph_assert/ceph_abort/
#3 Updated by Jeff Layton over 1 year ago
- Subject changed from remove some ceph_aborts from libcephfs to don't ceph_abort when someone passes bad whence value to llseek
- Component(FS) Client added
#4 Updated by Patrick Donnelly over 1 year ago
- Target version set to v15.0.0
- Start date deleted (
09/16/2019) - Source set to Development
- Backport set to nautilus,mimic
#5 Updated by Jeff Layton over 1 year ago
- Status changed from New to In Progress
#6 Updated by Patrick Donnelly over 1 year ago
- Subject changed from don't ceph_abort when someone passes bad whence value to llseek to client: return error when someone passes bad whence value to llseek
- Status changed from In Progress to Pending Backport
- Pull request ID set to 30580
#7 Updated by Nathan Cutler over 1 year ago
- Copied to Backport #42145: nautilus: client: return error when someone passes bad whence value to llseek added
#8 Updated by Nathan Cutler over 1 year ago
- Copied to Backport #42146: mimic: client: return error when someone passes bad whence value to llseek added
#9 Updated by Nathan Cutler 11 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".