client: don't ceph_abort on bad llseek whence value

There is no need to abort in this case. Just return -EINVAL.

Fixes: https://tracker.ceph.com/issues/41871
Signed-off-by: Jeff Layton <jlayton@redhat.com>
(cherry picked from commit bd20464d747a7357639dfd5c5ec1f34b2f88d378)